<resources>
    <string name="app_name">Seminarska</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_product_details">ProductDetailsActivity</string>
    <string name="title_activity_product_list2">ProductListActivity2</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Dobrodošli v spletno prodajalno</string>
    <string name="uname">Uporabniško ime</string>
    <string name="password">Geslo</string>
    <string name="login">Prijavi se!</string>
    <string name="products">Izdelki</string>
    <string name="profile_data">Profilni podatki</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="name">Ime</string>
    <string name="surname">Priimek</string>
    <string name="email">E-mail</string>
    <string name="choose_password">Izberite geslo</string>
    <string name="repeat_password">Ponovite geslo</string>
    <string name="mobile_phone">Mobilni telefon</string>
    <string name="street">Ulica</string>
    <string name="house_number">Hišna številka</string>
    <string name="post_number">Poštna številka</string>
    <string name="post_name">Naziv pošte</string>
    <string name="change">Spremeni</string>
    <string name="title_activity_cart">CartActivity</string>
    <string name="cart">Košarica</string>
    <string name="sum_no_ddv">Skupaj brez DDV: </string>
    <string name="ddv">DDV: </string>
    <string name="sum_with_ddv">Skupaj z DDV: </string>
    <string name="confirm">Potrdi</string>
    <string name="back">Nazaj</string>
    <string name="make_purchase">Oddaj narocilo</string>
    <string name="nakupi">Nakupi</string>
    <string name="title_activity_choose_orders">ChooseOrdersActivity</string>
    <string name="potrjeni">Potrjeni</string>
    <string name="oddani">Oddani</string>
    <string name="stornirani">Stornirani</string>
    <string name="title_activity_orders">OrdersActivity</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="logout">Odjava</string>
</resources>
