<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@android:id/list"></ListView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum_no_ddv"
        android:id="@+id/skupaj_brez_ddv"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ddv"
        android:id="@+id/ddv"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum_with_ddv"
        android:textSize="18sp"
        android:id="@+id/skupaj_z_ddv"></TextView>
    <Button
        android:id="@+id/oddaj_narocilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_purchase"/>
</LinearLayout>